added description to steering committee

--- a/index.html
+++ b/index.html
@@ -493,12 +493,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/1.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Prof. Ramalatha Marimuthu</h5>
+                                <h6>SS12 Chair</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -513,12 +513,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/2.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Mr. S.Purushothaman</h5>
+                                <h6>SS12 Chair Partnerships</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -534,12 +534,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/4.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Prof. Parkash Lohana</h5>
+                                <h6>SS12 Chair Partnership</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -554,12 +554,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/3.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Ms. Udari De Alwis</h5>
+                                <h6>SS12 Chair Operations</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -580,12 +580,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/6.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Ms.Nuwanthika Rajapaksha</h5>
+                                <h6>SS12 Chair Operations</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -600,12 +600,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/5.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Mr.Chandana Munasinghe</h5>
+                                <h6>SS12 Chair Operations</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -621,12 +621,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/8.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Mr. Pasan Ranathunga</h5>
+                                <h6>SS12 Chair Design</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -641,12 +641,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/7.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Mr. Divyanshu Verma</h5>
+                                <h6>Advisor</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -666,12 +666,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/9.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Dr. Bozenna Pasik-Duncan </h5>
+                                <h6>Advisor</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -686,12 +686,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/10.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Dr. Stanley Lam</h5>
+                                <h6>International Liaisons</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -707,12 +707,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/11.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Ms.Tasnim Binte Shawkat</h5>
+                                <h6>Chair, Communications</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -727,12 +727,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/12.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Mr.Vishnu PR</h5>
+                                <h6>Chair, Junior Einstein Track</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -752,12 +752,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/14.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Mr.Vamsi J Krishna</h5>
+                                <h6>Chair, Virtual Track</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -772,12 +772,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/13.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Mr. Navaneethakrishnan</h5>
+                                <h6>Chair, Maker Fair</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -793,12 +793,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/15.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Mr. Abilash Praveen</h5>
+                                <h6>Chair, Innovation Challenge</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -813,12 +813,12 @@
                         <div class="card-body">
 
                             <div class="feature-image-org">
-                                <img src="./images/gravatar.png" class="img-thumbnail" alt="">
+                                <img src="./images/profile/16.png" class="img-thumbnail" alt="">
                             </div>
 
                             <div class="organization-member">
-                                <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <h5 class="card-title">Dr. Sagar.G</h5>
+                                <h6>Immediate Past Chair</h6>
                                 <!-- <a href="#" class="btn btn-primary">Know More</a> -->
                             </div>
                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
