added some changes to styles and about page

--- a/about.html
+++ b/about.html
@@ -31,7 +31,9 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">IEEE SS12</a>
+        <a class="navbar-brand" href="#">
+            <img src="./images/colour-logo.png" alt="IEEE SS12" class="img-fluid" id="main-logo">
+        </a>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <div class="navbar-nav mr-auto mt-2 mt-lg-0"></div>
@@ -108,11 +110,9 @@
                         </div>
                     </div>
                     <div class="card-body" style="text-align: justify;">
-                        <p>IEEE is the world’s largest technical professional organization dedicated to advancing technology for the benefit of humanity. IEEE and its members inspire a global community to innovate for a better tomorrow through its highly-cited
-                            publications, conferences, technology standards, and professional and educational activities. IEEE is the trusted “voice” for engineering, computing and technology information around the globe. There are more than 420,000 IEEE
-                            members in more than 160 countries.</p>
-                        <p>IEEE publishes a third of the world’s technical literature in electrical engineering, computer science and electronics and is a leading developer of international standards that underpin many of today’s telecommunications, information
-                            technology and power generation products and services. </p>
+                        <strong>Fresh minds</strong> cater for fresh innovations in the domains untouched and for the issues
+                                unresolved. We invite students with curious minds to explore the possibility of becoming
+                                Einstein.
                     </div>
                 </div>
 
@@ -128,11 +128,11 @@
                         </div>
                     </div>
                     <div class="card-body" style="text-align: justify;">
-                        <p>IEEE is the world’s largest technical professional organization dedicated to advancing technology for the benefit of humanity. IEEE and its members inspire a global community to innovate for a better tomorrow through its highly-cited
-                            publications, conferences, technology standards, and professional and educational activities. IEEE is the trusted “voice” for engineering, computing and technology information around the globe. There are more than 420,000 IEEE
-                            members in more than 160 countries.</p>
-                        <p>IEEE publishes a third of the world’s technical literature in electrical engineering, computer science and electronics and is a leading developer of international standards that underpin many of today’s telecommunications, information
-                            technology and power generation products and services. </p>
+                        <p>Nothing can stop people from showing off their innovation for social cause to the right audience
+                            at the right time. Distance does not matter; money is no obstacle, if your project is a point
+                            of pride for you.</p>
+                            <p>Participants who cannot reach the venue physically are invited to register
+                                for virtual track to present their projects online.</p>
                     </div>
                 </div>
             </div>
