--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     <p class="title-main">PROJECT CATEGORIES</p>
                 </div>
                 <div class="row">
-                    <p class="title-sub">Rest of the Text</p>
+                    <p class="title-sub">Empathy to Engineerging : Solutions for Macro Issues</p>
                 </div>
             </div>
 
@@ -389,7 +389,7 @@
         <div class="tabs-section-gallery tabs-content-gallery">
             <ul class="nav nav-tabs nav-pill-list">
                 <li class="nav-item">
-                    <a class="nav-link active gallery-links" data-toggle="pill" href="#home">2018</a>
+                    <a class="nav-link active gallery-links" data-toggle="pill" href="#home">2017</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link gallery-links" data-toggle="pill" href="#menu1">2019</a>
